<?xml version="1.0"?>
<package format="2">
  <name>airlib_catkin</name>
  <version>0.0.0</version>
  <description>The airlib package</description>

  <maintainer email="jorik.de.waen@gmail.com">Jorik De Waen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mavlinkcom_catkin</depend>
  <depend>rpc_catkin</depend>


  <export>

  </export>
</package>
